# rhetor

./: .gitignore  CLAUDE.md  README.md  app.py  config.py  constants.py  main.py  pyproject.toml  requirements.txt  rhetor-planning.md
assets/: user_guide.md
audio/: __init__.py  audio_thread.py  buffer.py  models.py  player.py
core/: __init__.py  document_loader.py  models.py  reading_session.py  text_processor.py
core/parsers/: __init__.py  docx_parser.py  markdown_parser.py  pdf_parser.py  text_parser.py
tests/: conftest.py  test_app.py  test_audio_buffer.py  test_audio_models.py  test_audio_thread.py  test_config.py  test_constants.py  test_document_loader.py  test_document_view.py  test_docx_parser.py  test_edge_cases.py  test_edge_engine.py  test_engine_manager.py  test_markdown_parser.py  test_models.py  test_pdf_parser.py  test_piper_engine.py  test_playback_controller.py  test_reading_session_nav.py  test_sapi_engine.py  test_status_bar.py  test_text_parser.py  test_text_processor.py  test_toolbar.py  test_tts_models.py  test_user_guide.py  test_voice_catalog.py
tts/: __init__.py  base_engine.py  edge_engine.py  engine_manager.py  models.py  piper_engine.py  sapi_engine.py  voice_catalog.py
ui/: __init__.py  document_view.py  main_window.py  settings_dialog.py  status_bar.py  toolbar.py  user_guide.py
